--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<title>Redmine 404 error</title>
+<title>Fismine 404 error</title>
 <style>
 body{
 font-family: Trebuchet MS,Georgia,"Times New Roman",serif;
@@ -16,8 +16,8 @@ font-size:0.8em;
 }
 </style>
 <body>
-  <h1>Page not found</h1>
-  <p>The page you were trying to access doesn't exist or has been removed.</p>
-  <p><a href="javascript:history.back()">Back</a></p>
+  <h1>Pagina non trovata</h1>
+  <p>La pagina alla quale stai provando di accedere non esiste o è stata tolta.</p>
+  <p><a href="javascript:history.back()">Vai indietro</a></p>
 </body>
 </html>
