removed test pages

--- a/public/come ckeditor.html
+++ b/public/come ckeditor.html
@@ -4,9 +4,9 @@
     <title>installing ck editore </title>
 </head>
 <body>
-    <p>per test ci sono le ... pages </p>
+    <p> </p>
 allego qui in public una sql per fare la tabella poi occorre fare la migration qui sotto :
-
+    gem install ckeditor --version 3.4.3
     rake db:migrate:up version=20130606194328 --trace
 </body>
 </html>
