--- a/public/come ckeditor.html
+++ b/public/come ckeditor.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <p> </p>
-allego qui in public una sql per fare la tabella poi occorre fare la migration qui sotto :
+comandi!!!!
     gem install ckeditor --version 3.4.3
-    rake db:migrate:up version=20130606194328 --trace
+    rake db:migrate:up VERSION=20130606194328 --trace
 </body>
 </html>
